Refactored logic, the only bug I've seen is that the text can sometimes run out of bounds

--- a/style.css
+++ b/style.css
@@ -53,3 +53,7 @@ button {
     background-color: white;
     border-color: black;
 }
+
+.AC {
+    margin-left: 20px;
+}
